<resources>
    <string name="app_name">DailyTrivia</string>
    <string name="overview">Overview</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="theme_color_system">System theme colour</string>
    <string name="theme_color">Theme colour</string>
    <string name="dark_theme">Dark theme</string>
    <string name="pure_black_dark_theme">Black dark theme</string>
    <string name="pure_black_dark_theme_summary">Use the pure black theme if dark theme is enabled</string>
    <string name="dns_over_http_summary">Encrypt DNS queries over HTTPS protocol</string>
    <string name="settings_language">Language</string>
    <string name="settings_group_theme">Theme</string>
    <string name="settings_network">Network</string>
    <string name="navigation_menu_stats">Stats</string>
    <string name="settings_category">Category</string>
    <string name="settings_connect">Test connection</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="action_next">NEXT</string>
    <string name="login_github">Continue with GitHub</string>
    <string name="login_google">Continue with Google</string>
    <string name="or">Or</string>
    <string name="question_summary">Correct Answer: %1$s\nIncorrect Answers: %2$s</string>
    <string name="not_updated">Not Updated</string>
    <string name="app_language">Apps language</string>
    <string name="list_category">Category Repository</string>
    <string name="color_purple">Purple</string>
    <string name="login"><b>Login or Register</b></string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="encoding_prompt">Encoding</string>
    <string name="difficulty_prompt">Difficulty</string>
    <string name="type_prompt">Type</string>
    <string name="last_updated_at">Last updated at:</string>
    <plurals name="questions_available">
        <item quantity="one">There are a total of %d question available.</item>
        <item quantity="other">There are a total of %d questions available.</item>
    </plurals>
    <string name="error_rate_limit_exceeded">Error: Rate Limit Exceeded. Try again in 5 seconds.</string>
    <string name="save">Save Preferences</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="encoding_url3986">URL Encoding (RFC 3986)</string>
    <string name="encoding_base64">Base64 Encoding</string>
    <string name="encoding_legacyUrl">Legacy URL Encoding</string>
    <string name="encoding_defaultUrl">Default Encoding</string>
    <string name="enter_number_of_questions">Enter number of questions</string>
    <string name="choose_a_profile">Choose a Profile</string>
    <string name="back">Back</string>
    <string name="type_boolean">True / False</string>
    <string name="type_multiple">Multiple Choice</string>
    <string name="quiz_finished_message">All questions completed</string>
    <string name="continue_with">Continue With</string>
    <string name="btn_false">False</string>
    <string name="btn_true">True</string>
    <string name="multi_player_mode">Multiplayer Mode</string>
    <string name="play">Play</string>
    <string name="save_profile">Save Profile</string>
    <string name="number_of_questions_limit">Number of Questions (1–50)</string>
    <string name="settings_select_category">Select categories you want to be included in the quiz</string>
    <string name="settings_select_difficulty">Select the quiz difficulty</string>
    <string name="settings_select_type">Select the type of the question. For example Multiple Choice, or True or False</string>
    <string name="settings_select_encoding">Choose the encoding format when downloading the quiz. It is recommended to leave this setting at its default value, as it will have no impact to end-user.</string>
    <string name="any">Any</string>
    <string name="save_categories">Save category</string>
    <string name="select_categories">Select categories</string>
    <string name="password_too_short"><![CDATA[Password must be >8 characters]]></string>
    <string name="password_too_long"><![CDATA[Password must be <254 characters]]></string>
    <string name="username_too_short">Username should not be empty</string>
    <string name="username_too_long"><![CDATA[Username must be <254 characters]]></string>
    <string name="no_special_characters_username">Allowed characters: A–Z, a–z, 0–9, hyphen (–), and underscore (_)</string>
    <string name="error_no_questions">No questions available. Try again later.</string>
    <string name="error_fetching_questions">Error fetching questions:</string>

    <string name="category_animals">Animals</string>
    <string name="category_anime_manga">Entertainment: Japanese Anime &amp; Manga</string>
    <string name="category_art">Art</string>
    <string name="category_board_games">Entertainment: Board Games</string>
    <string name="category_books">Entertainment: Books</string>
    <string name="category_cartoon_animations">Entertainment: Cartoon &amp; Animations</string>
    <string name="category_celebrities">Celebrities</string>
    <string name="category_comics">Entertainment: Comics</string>
    <string name="category_computers">Science: Computers</string>
    <string name="category_film">Entertainment: Film</string>
    <string name="category_gadgets">Science: Gadgets</string>
    <string name="category_general_knowledge">General Knowledge</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_mathematics">Science: Mathematics</string>
    <string name="category_music">Entertainment: Music</string>
    <string name="category_musicals_theatres">Entertainment: Musicals &amp; Theatres</string>
    <string name="category_mythology">Mythology</string>
    <string name="category_politics">Politics</string>
    <string name="category_science_nature">Science &amp; Nature</string>
    <string name="category_sports">Sports</string>
    <string name="category_television">Entertainment: Television</string>
    <string name="category_vehicles">Vehicles</string>
    <string name="category_video_games">Entertainment: Video Games</string>
    <string name="add_profile">Add a new profile</string>
    <string name="no_category">No categories available</string>
    <string name="http_error_429">"HTTP 429 "</string>
    <string name="created_new_profile_with_id">"Created new profile with ID: "</string>
    <string name="no_profile_found_user">No profiles found for this user</string>
    <string name="profile_loaded">profile loaded</string>
    <string name="categories_loaded">categories loaded</string>
    <string name="category_not_found">Category not found</string>
    <string name="answer_option">Answer option:</string>
    <string name="dismiss">DISMISS</string>
    <string name="you_finished_the_quiz">You finished the quiz!</string>
    <string name="restart">Restart</string>
    <string name="time_error">Error: Chain validation failed. Please update the date and time in Settings.</string>
    <string name="chain_validation_failed">Chain validation failed</string>
    <string name="last_connected_at">Last connected at:</string>
    <string name="item_number">Item Number</string>
    <string name="content">Content</string>
    <string name="skip">Skip</string>
    <string name="double_points">Double Points</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="single_player_mode">Single Player Mode</string>
    <string name="button">Button</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="error_not_logged_in">Error: You are not logged in. Please Login to continue.</string>
    <string name="number_of_questions_empty">Please enter the number of questions.</string>
    <string name="number_of_questions_invalid">Invalid number. Enter a number between 1 and 50.</string>
    <string name="number_of_questions_too_small">Number of questions must be at least 1.</string>
    <string name="number_of_questions_too_large">Number of questions cannot exceed 50.</string>
    <string name="must_implement_onprofileselectedlistener">%1$s must implement OnProfileSelectedListener</string>
    <string name="logout">Logout</string>
    <string name="total_number_of_games">Total number of games: %1$s</string>
    <string name="accuracy">"Accuracy: "</string>
    <string name="percent">%</string>
    <string name="search_hint">Search Questions</string>
    <string name="total_attempts">"Total attempts: "</string>
    <string name="correct_answer_must_be_provided">Correct answer must be provided</string>
    <string name="answer_is_correct">Answer is Correct</string>
    <string name="invalid_profile_id">Invalid profile ID</string>
    <string name="error_saving_profiles">"Error saving profiles: "</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="error_category_not_found">Category not found</string>
    <string name="multiplayer_mode">Multiplayer mode</string>
    <string name="start_playing_now">Start playing now!</string>
    <string name="notify_me">Notify me</string>
    <string name="daily_trivia">Daily Trivia</string>
    <string name="join_game">Join Game</string>
    <string name="host_game">Host Game</string>
    <string name="hosting_game">Hosting game…</string>
    <string name="game_started_players_can_now_join">Game started! Players can now join.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_how_many_questions_you_want">Enter How Many Questions You Want</string>
    <string name="select_which_category_you_want">Select Which Category You Want</string>
    <string name="start_game">Start</string>
    <string name="error">Error</string>
    <string name="connected_to_game">Connected to game!</string>
    <string name="searching_for_a_game">Searching for a game…</string>
    <string name="select_category">Select Category</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="game_starting">Starting the game</string>
    <string name="not_enough_players">Need more than one player to start the game</string>
    <string name="joined_the_game">\n%1$s joined the game.</string>
    <string name="questions">Questions</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_4">Answer 4</string>
    <string name="player_scores_will_appear_here">Player Scores will appear here</string>
    <string name="answer_3">Answer 3</string>
    <string name="player_scores">Player Scores:</string>
    <string name="your_answers">Your Answer:</string>
    <string name="correct_answers">Correct Answer:</string>
    <string name="result">Result</string>
    <string name="tick">tick</string>


</resources>