<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userAnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_answers" />

    <TextView
        android:id="@+id/correctAnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />
</LinearLayout>
