<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_questions_edit_text_layout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/number_of_questions_limit"
            android:hint="@string/number_of_questions_limit"
            android:inputType="number"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_questions_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/enter_how_many_questions_you_want"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:textColorHint="@color/primary_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_layout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_category">

            <AutoCompleteTextView
                android:id="@+id/category_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:inputType="none"
                android:labelFor="@string/select_category"
                android:textColorHint="@color/primary_dark"
                app:simpleItems="@array/category_types"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/difficulty_layout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@string/difficulty_prompt">

            <AutoCompleteTextView
                android:id="@+id/difficulty_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/difficulty_prompt"
                android:inputType="none"
                app:simpleItems="@array/difficulty_levels" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_layout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@string/type_prompt">

            <AutoCompleteTextView
                android:id="@+id/type_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/type_prompt"
                android:inputType="none"
                app:simpleItems="@array/question_types" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/button_container"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hostButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host_game" />

            <Button
                android:id="@+id/joinButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/join_game" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:navGraph="@navigation/nav_graph_multi" />

    </LinearLayout>
</ScrollView>