<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingPrefix">

        <rikka.widget.borderview.BorderNestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:borderBottomVisibility="never"
            app:borderTopDrawable="@null"
            app:borderTopVisibility="whenTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="?dialogPreferredPadding"
                tools:context=".ui.activity.LoginActivity">

                <TextView
                    android:id="@+id/loginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginFieldTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/prompt_username"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:maxLength="254"
                        android:maxLines="1"
                        android:paddingEnd="48dp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordFieldTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="254"
                        android:maxLines="1"
                        android:paddingEnd="48dp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    style="@style/Widget.Vector.Button.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:text="@string/action_next"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/ssoButtonsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/or" />

                <LinearLayout
                    android:id="@+id/social_login_buttons_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_google"
                        style="@style/Widget.Vector.Button.Outlined.SocialLogin.Google.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_google"
                        android:textAlignment="center" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_github"
                        style="@style/Widget.Vector.Button.Outlined.SocialLogin.Github.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_github"
                        android:textAlignment="center" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone" />
            </LinearLayout>
        </rikka.widget.borderview.BorderNestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>